--- a/staff/sergi-bittan/arrays/index.html
+++ b/staff/sergi-bittan/arrays/index.html
@@ -11,10 +11,14 @@
     <script src="for-each.demo.js"></script>
     <script src="for-each.test.js"></script> -->
 
-    <script src="map.js"></script>
+    <!-- <script src="map.js"></script>
     <script src="map.test.js"></script>
+
     <script src="every.js"></script>
-    <script src="every.test.js"></script>
+    <script src="every.test.js"></script> -->
+
+    <script src="concat.js"></script>
+    <!-- <script src="concat.test.js"></script> -->
     
     <!-- <script src="push.js"></script>
     <script src="push.demo.js"></script> -->
