--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -7,6 +7,9 @@
     <title>arrays</title>
 </head>
 <body>
+    <script src="itest-1.0.0.js"></script>
+    
+
     <script src="from.js"></script>
     <script src="from-demo.js"></script>
 
