--- a/staff/ramon-palao/arrays/index.html
+++ b/staff/ramon-palao/arrays/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
-    <script src="join.js"></script>
-    <script src="join.test.js"></script>
+    <!-- <script src="join.js"></script> -->
+    <!-- <script src="join.test.js"></script> -->
+
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
     
 </body>
 </html>
