--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -9,21 +9,24 @@
 </head>
 
 <body>
+	<script src="./itest-1.0.0.js"></script>
+
 	<script src="./concat/concat.js"></script>
 	<script src="./concat/concat.test.js"></script>
 	<!-- <script src="./concat/concat-demo.js"></script> -->
 
-	<script src="./push/push.js"></script>
+	<!-- <script src="./push/push.js"></script>
 	<script src="./push/push.test.js"></script>
-	<!-- <script src="./push/push-demo.js"></script> -->
+	<script src="./push/push-demo.js"></script>
+
+	<script src="./reduce/reduce.js"></script>
+	<script src="./reduce/reduce.test.js"></script>
+	<script src="./reduce/reduce-demo.js"></script> --> -->
 
 	<script src="./every/every.js"></script>
 	<script src="./every/every.test.js"></script>
 	<!-- <script src="./every/every-demo.js"></script> -->
 
-	<script src="./reduce/reduce.js"></script>
-	<!-- <script src="./reduce/reduce.test.js"></script> -->
-	<script src="./reduce/reduce-demo.js"></script>
 </body>
 
 </html>
