--- a/staff/dario-fernandez/arrays/index.html
+++ b/staff/dario-fernandez/arrays/index.html
@@ -11,16 +11,21 @@
     <h3>Open the browser console to watch the tests result</h3>
     <p>We are cloning all Javascript array methods using only plain JS.</p>
 
-    <script src="fill.js"></script>
+    <script src="itest-1.0.0.js"></script>
+
+    <script src="every.js"></script>
+    <script src="every.test.js"></script>
+
+    <!-- <script src="fill.js"></script>
     <script src="fill.test.js"></script>
-    <!-- <script src="fill.demo.js"></script> -->
+    <script src="fill.demo.js"></script>
     <script src="find-index.js"></script>
     <script src="find-index.test.js"></script>
-    <!-- <script src="find-index.demo.js"></script> -->
+    <script src="find-index.demo.js"></script>
     <script src="slice.js"></script>
     <script src="slice.test.js"></script>
     <script src="reduce.js"></script>
-    <script src="reduce.test.js"></script>
+    <script src="reduce.test.js"></script> -->
     
 
 </body>
