--- a/staff/ramon-palao/arrays/index.html
+++ b/staff/ramon-palao/arrays/index.html
@@ -11,8 +11,11 @@
     <!-- <script src="join.js"></script> -->
     <!-- <script src="join.test.js"></script> -->
 
-    <script src="filter.js"></script>
-    <script src="filter.test.js"></script>
+    <!-- <script src="filter.js"></script> -->
+    <!-- <script src="filter.test.js"></script> -->
+
+    <script src="every.js"></script>
+    <script src="every.test.js"></script>
     
 </body>
 </html>
