add refactor of concat tests,  and filter tests

--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -15,6 +15,10 @@
 	<script src="./concat/concat.test.js"></script>
 	<!-- <script src="./concat/concat-demo.js"></script> -->
 
+	<script src="./filter/filter.js"></script>
+	<script src="./filter/filter.test.js"></script>
+	<!-- <script src="./filter/filter-demo.js"></script> -->
+
 	<!-- <script src="./push/push.js"></script>
 	<script src="./push/push.test.js"></script>
 	<script src="./push/push-demo.js"></script>
