--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -10,7 +10,7 @@
     <script src="itest-1.0.0.js"></script>
     
 
-    <script src="from.js"></script>
+    <!--<script src="from.js"></script>
     <script src="from-demo.js"></script>
 
     <script src="concat.js"></script>
@@ -18,12 +18,12 @@
     <script src="concat.test.js"></script>
 
     <script src="includes.js"></script>
-    <script src="includes.test.js"></script>
+    <script src="includes.test.js"></script>!-->
 
     <script src="pop.js"></script>
-    <script src="pop-demo.js"></script>
+    <script src="pop.test.js"></script>
 
-    <script src="every.js"></script>
+    <!--<script src="every.js"></script>
     <script src="every.demo.js"></script>
     <script src="every.test.js"></script>
 
@@ -37,7 +37,7 @@
     <script src="indexOf.test.js"></script>
 
     <script src="map.js"></script>
-    <script src="map.test.js"></script>
+    <script src="map.test.js"></script>!-->
 
     
 </body>
