--- a/staff/sergi-bittan/arrays/index.html
+++ b/staff/sergi-bittan/arrays/index.html
@@ -7,20 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src="for-each.js"></script>
-    <script src="for-each.demo.js"></script>
-    <script src="for-each.test.js"></script> -->
-
-    <!-- <script src="map.js"></script>
-    <script src="map.test.js"></script>
+    <script src="itest-1.0.0.js"></script>
 
     <script src="every.js"></script>
-    <script src="every.test.js"></script> -->
+    <script src="every.test.js"></script> 
+
+    <script src="for-each.js"></script>
+    <script src="for-each.demo.js"></script>
+    <script src="for-each.test.js"></script> 
+
+    <script src="map.js"></script>
+    <script src="map.test.js"></script>
+
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
+    
 
     <script src="concat.js"></script>
-    <!-- <script src="concat.test.js"></script> -->
+    <script src="concat.test.js"></script> 
     
-    <!-- <script src="push.js"></script>
-    <script src="push.demo.js"></script> -->
+    <script src="push.js"></script>
+    <script src="push.demo.js"></script> 
 </body>
 </html>
