update on arrays challenge

--- a/staff/federico-lacabaratz/arrays/index.html
+++ b/staff/federico-lacabaratz/arrays/index.html
@@ -7,6 +7,8 @@
     <title>CHL Arrays</title>
 </head>
 <body>
+    <script src="itest-1.0.0.js"></script>
+    
     <script src="for-each.js"></script>
     <script src="for-each.test.js"></script>
     <!-- <script src="for-each.demo.js"></script> -->
@@ -40,19 +42,19 @@
     <!-- <script src="map.demo.js"></script> -->
 
     <script src="pop.js"></script>
-    <!-- <script src="pop.test.js"></script> -->
+    <script src="pop.test.js"></script>
     <!-- <script src="pop.demo.js"></script> -->
 
     <script src="find.js"></script>
-    <!-- <script src="find.test.js"></script> -->
+    <script src="find.test.js"></script>
     <!-- <script src="find.demo.js"></script> -->
 
     <script src="findIndex.js"></script>
-    <!-- <script src="findIndex.test.js"></script> -->
+    <script src="findIndex.test.js"></script>
     <!-- <script src="findIndex.demo.js"></script> -->
     
     <script src="indexOf.js"></script>
-    <!-- <script src="indexOf.test.js"></script> -->
+    <script src="indexOf.test.js"></script>
     <!-- <script src="indexOf.demo.js"></script> -->
 
 </body>
