--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -19,13 +19,13 @@
 	<script src="./filter/filter.test.js"></script>
 	<!-- <script src="./filter/filter-demo.js"></script> -->
 
-	<!-- <script src="./push/push.js"></script>
+	<script src="./push/push.js"></script>
 	<script src="./push/push.test.js"></script>
-	<script src="./push/push-demo.js"></script>
+	<!-- <script src="./push/push-demo.js"></script> -->
 
-	<script src="./reduce/reduce.js"></script>
+	<!-- <script src="./reduce/reduce.js"></script>
 	<script src="./reduce/reduce.test.js"></script>
-	<script src="./reduce/reduce-demo.js"></script> --> -->
+	<script src="./reduce/reduce-demo.js"></script> -->
 
 	<script src="./every/every.js"></script>
 	<script src="./every/every.test.js"></script>
