--- a/staff/victori-murillo/arrays/index.html
+++ b/staff/victori-murillo/arrays/index.html
@@ -7,6 +7,8 @@
   <title>Arrays</title>
 </head>
 <body>
+  <script src="itest-1.0.0.js"></script>
+  
   <!--
     <script src="concat/concat.js"></script>
     <script src="concat/concat.demo.js"></script>
@@ -16,11 +18,8 @@
     <script src="every/every.demo.js"></script>
     <script src="every/every.test.js"></script>
 
-    <script src="filter/filter.js"></script>
-    <script src="filter/filter.demo.js"></script>
-    <script src="filter/filter.test.js"></script>
+    
   
-
     <script src="find/find.js"></script>
     <script src="find/find.demo.js"></script>
     <script src="find/find.test.js"></script>
@@ -28,7 +27,9 @@
     <script src="flat/flat.js"></script>
     <script src="flat/flat.demo.js"></script>
 
-    
+    <script src="for-each/for-each.js"></script>
+    <script src="for-each/for-each.demo.js"></script>
+    <script src="for-each/for-each.test.js"></script>
 
     <script src="index-of/index-of.js"></script>
     <script src="index-of/index-of.demo.js"></script>
@@ -66,10 +67,9 @@
   
   -->
 
-  <script src="for-each/for-each.js"></script>
-  <!-- <script src="for-each/for-each.demo.js"></script> -->
-  <script src="for-each/for-each.test.js"></script>
-
+  <script src="filter/filter.js"></script>
+  <!-- <script src="filter/filter.demo.js"></script> -->
+  <script src="filter/filter.test.js"></script>
   
   
 
