updates to the arrays testing

--- a/staff/federico-lacabaratz/arrays/index.html
+++ b/staff/federico-lacabaratz/arrays/index.html
@@ -17,44 +17,44 @@
     <script src="push.test.js"></script>
     <!-- <script src="push.demo.js"></script> -->
 
-    <script src="concat.js"></script>
-    <script src="concat.test.js"></script>
+    <!-- <script src="concat.js"></script>
+    <script src="concat.test.js"></script> -->
     <!-- <script src="concat.demo.js"></script> -->
 
-    <script src="every.js"></script>
-    <script src="every.test.js"></script>
+    <!-- <script src="every.js"></script>
+    <script src="every.test.js"></script> -->
     <!-- <script src="every.demo.js"></script> -->
 
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
     <!-- <script src="filter.demo.js"></script> -->
 
-    <script src="from.js"></script>
-    <script src="from.test.js" ></script>
+    <!-- <script src="from.js"></script>
+    <script src="from.test.js" ></script> -->
     <!-- <script src="from.demo.js"></script> -->
 
-    <script src="includes.js"></script>
-    <script src="includes.test.js"></script>
+    <!-- <script src="includes.js"></script>
+    <script src="includes.test.js"></script> -->
     <!-- <script src="includes.demo.js"></script> -->
 
-    <script src="map.js"></script>
-    <script src="map.test.js"></script>
+    <!-- <script src="map.js"></script>
+    <script src="map.test.js"></script> -->
     <!-- <script src="map.demo.js"></script> -->
 
-    <script src="pop.js"></script>
-    <script src="pop.test.js"></script>
+    <!-- <script src="pop.js"></script>
+    <script src="pop.test.js"></script> -->
     <!-- <script src="pop.demo.js"></script> -->
 
-    <script src="find.js"></script>
-    <script src="find.test.js"></script>
+    <!-- <script src="find.js"></script>
+    <script src="find.test.js"></script> -->
     <!-- <script src="find.demo.js"></script> -->
 
-    <script src="findIndex.js"></script>
-    <script src="findIndex.test.js"></script>
+    <!-- <script src="findIndex.js"></script>
+    <script src="findIndex.test.js"></script> -->
     <!-- <script src="findIndex.demo.js"></script> -->
     
-    <script src="indexOf.js"></script>
-    <script src="indexOf.test.js"></script>
+    <!-- <script src="indexOf.js"></script>
+    <script src="indexOf.test.js"></script> -->
     <!-- <script src="indexOf.demo.js"></script> -->
 
 </body>
