--- a/staff/marc-salas/arrays/index.html
+++ b/staff/marc-salas/arrays/index.html
@@ -25,7 +25,7 @@
     <script src="every.js"></script>
     <script src="every-test.js"></script>
 
-    <!-- <script src="splice.js"></script>
+    <script src="splice.js"></script>
     <script src="splice-test.js"></script>
 
     <script src="reverse.js"></script>
@@ -34,7 +34,7 @@
     <script src="filter.js"></script>
     <script src="filter-test.js"></script>
 
-    <script src="reduce.js"></script>
+    <!-- <script src="reduce.js"></script>
     <script src="reduce-test.js"></script>  -->
 
 </body>
