--- a/staff/ramon-palao/arrays/index.html
+++ b/staff/ramon-palao/arrays/index.html
@@ -8,14 +8,25 @@
 </head>
 <body>
 
+    <script src="itest-1.0.0.js"></script>
+
     <!-- <script src="join.js"></script> -->
     <!-- <script src="join.test.js"></script> -->
 
     <!-- <script src="filter.js"></script> -->
     <!-- <script src="filter.test.js"></script> -->
 
-    <script src="every.js"></script>
-    <script src="every.test.js"></script>
+    <!-- <script src="every.js"></script>
+    <script src="every.test.js"></script> -->
     
+    <!-- <script src="find.js"></script>
+    <script src="find.test.js"></script> -->
+
+    <!-- <script src="includes.js"></script>
+    <script src="includes.test.js"></script> -->
+
+    <script src="index-of.js"></script>
+    <script src="index-of.test.js"></script>
+
 </body>
 </html>
