--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -20,17 +20,17 @@
     <script src="includes.js"></script>
     <script src="includes.test.js"></script>!-->
 
-    <script src="pop.js"></script>
+    <!--<script src="pop.js"></script>
     <script src="pop.test.js"></script>
 
-    <!--<script src="every.js"></script>
+    <script src="every.js"></script>
     <script src="every.demo.js"></script>
-    <script src="every.test.js"></script>
+    <script src="every.test.js"></script>!-->
 
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
 
-    <script src="find.js"></script>
+    <!--<script src="find.js"></script>
     <script src="find.test.js"></script>
 
     <script src="indexOf.js"></script>
