--- a/staff/ramon-palao/arrays/index.html
+++ b/staff/ramon-palao/arrays/index.html
@@ -10,8 +10,8 @@
 
     <script src="itest-1.0.0.js"></script>
 
-    <!-- <script src="join.js"></script> -->
-    <!-- <script src="join.test.js"></script> -->
+    <script src="join.js"></script>
+    <script src="join.test.js"></script>
 
     <!-- <script src="filter.js"></script> -->
     <!-- <script src="filter.test.js"></script> -->
@@ -25,8 +25,8 @@
     <!-- <script src="includes.js"></script>
     <script src="includes.test.js"></script> -->
 
-    <script src="index-of.js"></script>
-    <script src="index-of.test.js"></script>
+    <!-- <script src="index-of.js"></script>
+    <script src="index-of.test.js"></script> -->
 
 </body>
 </html>
