add tests for reduce function

--- a/staff/lisandro-bertoli/arrays/index.html
+++ b/staff/lisandro-bertoli/arrays/index.html
@@ -23,9 +23,9 @@
 	<script src="./push/push.test.js"></script>
 	<!-- <script src="./push/push-demo.js"></script> -->
 
-	<!-- <script src="./reduce/reduce.js"></script>
+	<script src="./reduce/reduce.js"></script>
 	<script src="./reduce/reduce.test.js"></script>
-	<script src="./reduce/reduce-demo.js"></script> -->
+	<!-- <script src="./reduce/reduce-demo.js"></script> -->
 
 	<script src="./every/every.js"></script>
 	<script src="./every/every.test.js"></script>
