--- a/staff/marc-salas/arrays/index.html
+++ b/staff/marc-salas/arrays/index.html
@@ -34,8 +34,12 @@
     <script src="filter.js"></script>
     <script src="filter-test.js"></script>
 
-    <!-- <script src="reduce.js"></script>
-    <script src="reduce-test.js"></script>  -->
+    <script src="reduce.js"></script>
+    <script src="reduce-test.js"></script> 
+
+    <script src="pop.js"></script>
+    <script src="pop-test.js"></script>
+
 
 </body>
 </html>
