updated tests before versiont itest v1.1.0

--- a/staff/victori-murillo/arrays/index.html
+++ b/staff/victori-murillo/arrays/index.html
@@ -18,11 +18,11 @@
     <script src="every/every.demo.js"></script>
     <script src="every/every.test.js"></script>
 
-    
+    <script src="filter/filter.js"></script>
+    <script src="filter/filter.demo.js"></script>
+    <script src="filter/filter.test.js"></script>
   
-    <script src="find/find.js"></script>
-    <script src="find/find.demo.js"></script>
-    <script src="find/find.test.js"></script>
+    
 
     <script src="flat/flat.js"></script>
     <script src="flat/flat.demo.js"></script>
@@ -58,6 +58,11 @@
 
     <script src="some/some.js"></script>
     <script src="some/some.demo.js"></script>
+    <script src="some/some.test.js"></script>
+
+    <script src="every/every.js"></script>
+    <script src="every/every.demo.js"></script>
+    <script src="every/every.test.js"></script>
 
     <script src="unshift/unshift.js"></script>
     <script src="unshift/unshift.demo.js"></script>
@@ -67,10 +72,11 @@
   
   -->
 
-  <script src="filter/filter.js"></script>
-  <!-- <script src="filter/filter.demo.js"></script> -->
-  <script src="filter/filter.test.js"></script>
+  <script src="find/find.js"></script>
+  <!-- <script src="find/find.demo.js"></script> -->
+  <script src="find/find.test.js"></script>
   
+
   
 
 </body>
