update arrays excercises

--- a/staff/federico-lacabaratz/arrays/index.html
+++ b/staff/federico-lacabaratz/arrays/index.html
@@ -17,8 +17,8 @@
     <script src="push.test.js"></script>
     <!-- <script src="push.demo.js"></script> -->
 
-    <!-- <script src="concat.js"></script>
-    <script src="concat.test.js"></script> -->
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
     <!-- <script src="concat.demo.js"></script> -->
 
     <!-- <script src="every.js"></script>
@@ -28,6 +28,9 @@
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
     <!-- <script src="filter.demo.js"></script> -->
+
+    <script src="some.js"></script>
+    <script src="some.test.js"></script>
 
     <!-- <script src="from.js"></script>
     <script src="from.test.js" ></script> -->
