--- a/staff/monica-morales/arrays/index.html
+++ b/staff/monica-morales/arrays/index.html
@@ -9,7 +9,6 @@
 <body>
     <script src="itest-1.0.0.js"></script>
     
-
     <!--<script src="from.js"></script>
     <script src="from-demo.js"></script>
 
@@ -25,18 +24,18 @@
 
     <script src="every.js"></script>
     <script src="every.demo.js"></script>
-    <script src="every.test.js"></script>!-->
+    <script src="every.test.js"></script>
 
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
 
-    <!--<script src="find.js"></script>
-    <script src="find.test.js"></script>
+    <script src="find.js"></script>
+    <script src="find.test.js"></script>!-->
 
     <script src="indexOf.js"></script>
     <script src="indexOf.test.js"></script>
 
-    <script src="map.js"></script>
+    <!--<script src="map.js"></script>
     <script src="map.test.js"></script>!-->
 
     
