updates to arrays challenge

--- a/staff/federico-lacabaratz/murray/index.html
+++ b/staff/federico-lacabaratz/murray/index.html
@@ -16,6 +16,9 @@
     <script src="murray.prototype.constructor.spec.js"></script>
     <script src="murray.prototype.push.spec.js"></script>
     <script src="murray.prototype.for-each.spec.js"></script>
+    <script src="murray.prototype.pop.spec.js"></script>
+    <script src="murray.prototype.concat.spec.js"></script>
+    <script src="murray.prototype.every.spec.js"></script>
     <!-- <script src="murray.prototype.filter.spec.js"></script> -->
 </body>
 
