--- a/staff/lisandro-bertoli/murray/index.html
+++ b/staff/lisandro-bertoli/murray/index.html
@@ -18,6 +18,7 @@
     <script src="murray.prototype.push.spec.js"></script>
     <script src="murray.prototype.for-each.spec.js"></script>
     <script src="murray.prototype.pop.spec.js"></script>
+    <script src="murray.prototype.map.spec.js"></script>
     <!-- <script src="murray.prototype.filter.spec.js"></script> -->
 </body>
 
