--- a/staff/ramon-palao/murray/index.html
+++ b/staff/ramon-palao/murray/index.html
@@ -9,14 +9,17 @@
 </head>
 
 <body>
-    <!-- <script src="itest-1.1.1.js"></script>
+    <script src="itest-1.1.1.js"></script>
 
     <script src="murray.js"></script>
 
     <script src="murray.prototype.constructor.spec.js"></script>
-    <script src="murray.prototype.push.spec.js"></script>
-    <script src="murray.prototype.for-each.spec.js"></script> -->
-    <!-- <script src="murray.prototype.filter.spec.js"></script> -->
+    <!-- <script src="murray.prototype.push.spec.js"></script>
+    <script src="murray.prototype.for-each.spec.js"></script>
+    <script src="murray.prototype.filter.spec.js"></script> -->
+
+    <script src="murray.prototype.some.spec.js"></script>
+    <script src="murray.prototype.concat.spec.js"></script>
 </body>
 
 </html>
