46 tests with itest v1.1.1

--- a/staff/victori-murillo/murray/index.html
+++ b/staff/victori-murillo/murray/index.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
-
 <body>
-    <script src="itest-1.1.1.js"></script>
+  <script src="itest-1.1.1.js"></script>
+  <script src="murray.js"></script>
+  <script src="murray.prototype.constructor.spec.js"></script>
+  
+  <script src="forEach/forEach.js"></script>
+  <script src="forEach/murray.prototype.for-each.spec.js"></script>
 
-    <script src="murray.js"></script>
+  <script src="push/push.js"></script>
+  <script src="push/murray.prototype.push.spec.js"></script>
 
-    <script src="murray.prototype.constructor.spec.js"></script>
-    <script src="murray.prototype.push.spec.js"></script>
-    <script src="murray.prototype.for-each.spec.js"></script>
-    <!-- <script src="murray.prototype.filter.spec.js"></script> -->
+  <script src="filter/filter.js"></script>
+  <script src="filter/murray.prototype.filter.spec.js"></script>
+
+  <script src="every/every.js"></script>
+  <script src="every/murray.prototype.every.spec.js"></script>
+
+  <script src="pop/pop.js"></script>
+  <script src="pop/murray.prototype.pop.spec.js"></script>
+
+  <script src="concat/concat.js"></script>
+  <script src="concat/murray.prototype.concat.spec.js"></script>
+
+  <script src="map/map.js"></script>
+  <script src="map/murray.prototype.map.spec.js"></script>
+
+  <script src="find/find.js"></script>
+  <script src="find/murray.prototype.find.spec.js"></script>
+
+  <script src="reverse/reverse.js"></script>
+  <script src="reverse/murray.prototype.reverse.spec.js"></script>
+
+  <!-- <script src="splice/splice.js"></script>
+  <script src="splice/murray.prototype.splice.spec.js"></script> -->
+  
+
+  <script src="results-itest.js"></script>
 </body>
-
 </html>
