--- a/staff/lisandro-bertoli/murray/index.html
+++ b/staff/lisandro-bertoli/murray/index.html
@@ -20,7 +20,7 @@
     <script src="murray.prototype.pop.spec.js"></script>
     <script src="murray.prototype.map.spec.js"></script>
     <script src="murray.prototype.indexOf.spec.js"></script>
-    <!-- <script src="murray.prototype.filter.spec.js"></script> -->
+    <script src="murray.prototype.filter.spec.js"></script>
 </body>
 
 </html>
