add shift, filter, find

--- a/staff/monica-morales/murray/index.html
+++ b/staff/monica-morales/murray/index.html
@@ -22,6 +22,8 @@
     <script src="murray.prototype.includes.spec.js"></script>
     <script src="murray.prototype.from.spec.js"></script> 
     <script src="murray.prototype.shift.spec.js"></script>
+    <script src="murray.prototype.filter.spec.js"></script>
+    <script src="murray.prototype.find.spec.js"></script>
 </body>
 
 </html>
