--- a/staff/monica-morales/murray/specs.html
+++ b/staff/monica-morales/murray/specs.html
@@ -25,6 +25,8 @@
   <script src="murray.prototype.includes.spec.js"></script>
   <script src="murray.prototype.from.spec.js"></script>
   <script src="murray.prototype.shift.spec.js"></script>
+  <script src="murray.prototype.filter.spec.js"></script>
+  <script src="murray.prototype.find.spec.js"></script>
 </head>
 
 <body>
