add murray concat and murray pop method

--- a/staff/ramon-palao/murray/index.html
+++ b/staff/ramon-palao/murray/index.html
@@ -20,6 +20,7 @@
 
     <script src="murray.prototype.some.spec.js"></script>
     <script src="murray.prototype.concat.spec.js"></script>
+    <script src="murray.prototype.pop.spec.js"></script>
 </body>
 
 </html>
