--- a/staff/dario-fernandez/murray/index.html
+++ b/staff/dario-fernandez/murray/index.html
@@ -18,7 +18,8 @@
     <script src="murray.prototype.constructor.spec.js"></script>
     <script src="murray.prototype.push.spec.js"></script>
     <script src="murray.prototype.pop.spec.js"></script>
-    <script src="muray.prototype.concat.spec.js"></script>
+    <script src="murray.prototype.concat.spec.js"></script>
+    <script src="murray.prototype.splice.spec.js"></script>
 
 </body>
 </html>
