--- a/staff/marc-salas/murray/index.html
+++ b/staff/marc-salas/murray/index.html
@@ -19,6 +19,8 @@
     <script src="murray.prototype.pop.spec.js"></script>
     <script src="murray.prototype.concat.spec.js"></script>   
     <script src="murray.prototype.fill.spec.js"></script>
+    <script src="murray.prototype.every.spec.js"></script>
+    <script src="murray.prototype.splice.spec.js"></script>
     <!-- <script src="murray.prototype.filter.spec.js"></script>
 </body>
 
