--- a/staff/ramon-palao/murray/index.html
+++ b/staff/ramon-palao/murray/index.html
@@ -21,6 +21,7 @@
     <script src="murray.prototype.some.spec.js"></script>
     <script src="murray.prototype.concat.spec.js"></script>
     <script src="murray.prototype.pop.spec.js"></script>
+    <script src="murray.prototype.includes.spec.js"></script>
 </body>
 
 </html>
