--- a/staff/dario-fernandez/murray/index.html
+++ b/staff/dario-fernandez/murray/index.html
@@ -20,6 +20,7 @@
     <script src="murray.prototype.pop.spec.js"></script>
     <script src="murray.prototype.concat.spec.js"></script>
     <script src="murray.prototype.splice.spec.js"></script>
+    <script src="murray.prototype.reduce.spec.js"></script>
 
 </body>
 </html>
