--- a/staff/marc-salas/murray/index.html
+++ b/staff/marc-salas/murray/index.html
@@ -21,6 +21,7 @@
     <script src="murray.prototype.fill.spec.js"></script>
     <script src="murray.prototype.every.spec.js"></script>
     <script src="murray.prototype.splice.spec.js"></script>
+    <script src="murray.prototype.reverse.spec.js"></script>
     <!-- <script src="murray.prototype.filter.spec.js"></script>
 </body>
 
