--- a/staff/lisandro-bertoli/murray/index.html
+++ b/staff/lisandro-bertoli/murray/index.html
@@ -21,6 +21,11 @@
     <script src="murray.prototype.map.spec.js"></script>
     <script src="murray.prototype.indexOf.spec.js"></script>
     <script src="murray.prototype.filter.spec.js"></script>
+    <script src="murray.prototype.splice.spec.js"></script>
+    <script src="murray.prototype.shift.spec.js"></script>
+
+
+
 </body>
 
 </html>
