updates to murray/jasmine method testing

--- a/staff/federico-lacabaratz/murray/specs.html
+++ b/staff/federico-lacabaratz/murray/specs.html
@@ -19,7 +19,19 @@
   <script src="murray.prototype.constructor.spec.js"></script>
   <script src="murray.prototype.push.spec.js"></script>
   <script src="murray.prototype.for-each.spec.js"></script>
-  <!-- <script src="murray.prototype.filter.spec.js"></script> -->
+  <script src="murray.prototype.pop.spec.js"></script>
+  <script src="murray.prototype.concat.spec.js"></script>
+  <script src="murray.prototype.every.spec.js"></script>
+  <script src="murray.prototype.filter.spec.js"></script>
+  <script src="murray.prototype.reverse.spec.js"></script>
+  <script src="murray.prototype.map.spec.js"></script>
+  <script src="murray.prototype.reduce.spec.js"></script>
+  <script src="murray.prototype.includes.spec.js"></script>
+  <script src="murray.prototype.indexOf.spec.js"></script>
+  <script src="murray.prototype.from.spec.js"></script>
+  <script src="murray.prototype.find.spec.js"></script>
+  <script src="murray.prototype.some.spec.js"></script>
+  <script src="murray.prototype.findIndex.spec.js"></script>
 </head>
 
 <body>
