--- a/staff/ramon-palao/murray/index.html
+++ b/staff/ramon-palao/murray/index.html
@@ -14,14 +14,15 @@
     <script src="murray.js"></script>
 
     <script src="murray.prototype.constructor.spec.js"></script>
-    <!-- <script src="murray.prototype.push.spec.js"></script>
+    <script src="murray.prototype.push.spec.js"></script>
     <script src="murray.prototype.for-each.spec.js"></script>
-    <script src="murray.prototype.filter.spec.js"></script> -->
-
     <script src="murray.prototype.some.spec.js"></script>
     <script src="murray.prototype.concat.spec.js"></script>
     <script src="murray.prototype.pop.spec.js"></script>
     <script src="murray.prototype.includes.spec.js"></script>
+    <script src="murray.prototype.index-of.spec.js"></script>
+    <script src="murray.prototype.filter.spec.js"></script>
+    <script src="murray.prototype.find.spec.js"></script>
 </body>
 
 </html>
