--- a/staff/victori-murillo/murray/index.html
+++ b/staff/victori-murillo/murray/index.html
@@ -38,9 +38,43 @@
   <script src="reverse/reverse.js"></script>
   <script src="reverse/murray.prototype.reverse.spec.js"></script>
 
-  <!-- <script src="splice/splice.js"></script>
-  <script src="splice/murray.prototype.splice.spec.js"></script> -->
-  
+  <script src="unshift/unshift.js"></script>
+  <script src="unshift/murray.prototype.unshift.spec.js"></script>
+
+  <script src="shift/shift.js"></script>
+  <script src="shift/murray.prototype.shift.spec.js"></script>
+
+  <script src="some/some.js"></script>
+  <script src="some/murray.prototype.some.spec.js"></script>
+
+  <script src="index-of/index-of.js"></script>
+  <script src="index-of/murray.prototype.index-of.spec.js"></script>
+
+  <script src="join/join.js"></script>
+  <script src="join/murray.prototype.join.spec.js"></script>
+
+  <script src="slice/slice.js"></script>
+  <script src="slice/murray.prototype.slice.spec.js"></script>
+
+  <script src="splice/splice.js"></script>
+  <script src="splice/murray.prototype.splice.spec.js"></script>
+
+  <!-- 
+  <script src="flat/flat.js"></script>
+  <script src="flat/murray.prototype.flat.spec.js"></script>
+
+  <script src="splice/splice.js"></script>
+  <script src="splice/murray.prototype.splice.spec.js"></script>
+
+  <script src="reduce-of/reduce-of.js"></script>
+  <script src="reduce-of/murray.prototype.reduce-of.spec.js"></script>
+
+  <script src="copy-within/copy-within.js"></script>
+  <script src="copy-within/murray.prototype.copy-within.spec.js"></script>
+
+  <script src="sort/sort.js"></script>
+  <script src="sort/murray.prototype.sort.spec.js"></script>
+  -->
 
   <script src="results-itest.js"></script>
 </body>
