upload changes on murray html file

--- a/staff/ramon-palao/murray/index.html
+++ b/staff/ramon-palao/murray/index.html
@@ -11,7 +11,7 @@
 <body>
     <script src="itest-1.1.1.js"></script>
 
-    <script src="murray.js"></script>
+    <script src="murray.prototype.constructor.js"></script>
 
     <script src="murray.prototype.constructor.spec.js"></script>
     <script src="murray.prototype.push.spec.js"></script>
