--- a/staff/sergi-bittan/arrays/index.html
+++ b/staff/sergi-bittan/arrays/index.html
@@ -26,10 +26,11 @@
     <!-- <script src="concat.js"></script>
     <script src="concat.test.js"></script>  -->
     
-    <script src="some.js"></script> 
+    <!-- <script src="some.js"></script> 
     <script src="some.test.js"></script> 
-     
+      -->
     <!-- <script src="push.js"></script>
     <script src="push.demo.js"></script>  -->
+    <script src="pop.js"></script>
 </body>
 </html>
