--- a/staff/sergi-bittan/murray/index.html
+++ b/staff/sergi-bittan/murray/index.html
@@ -22,6 +22,8 @@
     <script src="murray.prototype.reverse.spec.js"></script>
     <script src="murray.prototype.filter.spec.js"></script>
     <script src="murray.prototype.slice.spec.js"></script>
+    <script src="murray.prototype.shift.spec.js"></script>
+    <script src="murray.prototype.find-index.spec.js"></script>
     <!-- <script src="murray.prototype.concat.spec.js"></script>
     <script src="murray.prototype.filter.spec.js"></script>
     <script src="murray.prototype.find-index.spec.js"></script> -->
