--- a/staff/lisandro-bertoli/murray/specs.html
+++ b/staff/lisandro-bertoli/murray/specs.html
@@ -16,9 +16,19 @@
 
   <script src="murray.prototype.constructor.js"></script>
 
+  <script src="murray.prototype.constructor.js"></script>
+
   <script src="murray.prototype.constructor.spec.js"></script>
+  <script src="murray.prototype.concat.spec.js"></script>
   <script src="murray.prototype.push.spec.js"></script>
   <script src="murray.prototype.for-each.spec.js"></script>
+  <script src="murray.prototype.pop.spec.js"></script>
+  <script src="murray.prototype.map.spec.js"></script>
+  <script src="murray.prototype.indexOf.spec.js"></script>
+  <script src="murray.prototype.filter.spec.js"></script>
+  <script src="murray.prototype.splice.spec.js"></script>
+  <script src="murray.prototype.shift.spec.js"></script>
+  <script src="murray.prototype.unshift.spec.js"></script>
   <!-- <script src="murray.prototype.filter.spec.js"></script> -->
 </head>
 
