--- a/staff/lisandro-bertoli/murray/index.html
+++ b/staff/lisandro-bertoli/murray/index.html
@@ -24,6 +24,7 @@
     <script src="murray.prototype.splice.spec.js"></script>
     <script src="murray.prototype.shift.spec.js"></script>
     <script src="murray.prototype.unshift.spec.js"></script>
+    <script src="murray.prototype.join.spec.js"></script>
 
 
 </body>
