add join method test

--- a/staff/ramon-palao/murray/index.html
+++ b/staff/ramon-palao/murray/index.html
@@ -23,6 +23,7 @@
     <script src="murray.prototype.index-of.spec.js"></script>
     <script src="murray.prototype.filter.spec.js"></script>
     <script src="murray.prototype.find.spec.js"></script>
+    <script src="murray.prototype.join.spec.js"></script>
 </body>
 
 </html>
