--- a/staff/sergi-bittan/murray/index.html
+++ b/staff/sergi-bittan/murray/index.html
@@ -24,9 +24,9 @@
     <script src="murray.prototype.slice.spec.js"></script>
     <script src="murray.prototype.shift.spec.js"></script>
     <script src="murray.prototype.find-index.spec.js"></script>
-    <!-- <script src="murray.prototype.concat.spec.js"></script>
+    <script src="murray.prototype.concat.spec.js"></script>
     <script src="murray.prototype.filter.spec.js"></script>
-    <script src="murray.prototype.find-index.spec.js"></script> -->
+    <script src="murray.prototype.find-index.spec.js"></script>
 </body>
 
 </html>
