--- a/staff/marc-salas/murray/index.html
+++ b/staff/marc-salas/murray/index.html
@@ -23,6 +23,7 @@
     <script src="murray.prototype.splice.spec.js"></script>
     <script src="murray.prototype.reverse.spec.js"></script>
     <script src="murray.prototype.find.spec.js"></script>
+    <script src="murray.prototype.includes.spec.js"></script>
     <!-- <script src="murray.prototype.filter.spec.js"></script>
 </body>
 
