add every, indexOf

--- a/staff/monica-morales/murray/specs.html
+++ b/staff/monica-morales/murray/specs.html
@@ -27,6 +27,11 @@
   <script src="murray.prototype.shift.spec.js"></script>
   <script src="murray.prototype.filter.spec.js"></script>
   <script src="murray.prototype.find.spec.js"></script>
+  <script src="murray.prototype.reverse.spec.js"></script>
+  <script src="murray.prototype.slice.spec.js"></script>
+  <script src="murray.prototype.every.spec.js"></script>
+  <script src="murray.prototype.indexOf.spec.js"></script>
+
 </head>
 
 <body>
