--- a/staff/federico-lacabaratz/murray/index.html
+++ b/staff/federico-lacabaratz/murray/index.html
@@ -29,6 +29,7 @@
     <script src="murray.prototype.find.spec.js"></script>
     <script src="murray.prototype.some.spec.js"></script>
     <script src="murray.prototype.findIndex.spec.js"></script>
+    <script src="murray.prototype.splice.spec.js"></script>
 </body>
 
 </html>
