--- a/staff/federico-lacabaratz/murray/specs.html
+++ b/staff/federico-lacabaratz/murray/specs.html
@@ -32,6 +32,7 @@
   <script src="murray.prototype.find.spec.js"></script>
   <script src="murray.prototype.some.spec.js"></script>
   <script src="murray.prototype.findIndex.spec.js"></script>
+  <script src="murray.prototype.splice.spec.js"></script>
 </head>
 
 <body>
