--- a/staff/dario-fernandez/murray/index.html
+++ b/staff/dario-fernandez/murray/index.html
@@ -21,6 +21,7 @@
     <script src="murray.prototype.concat.spec.js"></script>
     <script src="murray.prototype.splice.spec.js"></script>
     <script src="murray.prototype.reduce.spec.js"></script>
+    <script src="murray.prototype.every.spec.js"></script>
 
 </body>
 </html>
