--- a/staff/manuel-barzi/googl/8/index.html
+++ b/staff/manuel-barzi/googl/8/index.html
@@ -14,6 +14,8 @@
     <script src="utils/call.js"></script>
     <script src="utils/search.js"></script>
 
+    <script src="components/component.js"></script>
+    <script src="components/interactive.js"></script>
     <script src="components/app.js"></script>
     <script src="components/login.js"></script>
     <script src="components/register.js"></script>
