add toggle and modify search to support favs

--- a/staff/manuel-barzi/karmazon/4/index.html
+++ b/staff/manuel-barzi/karmazon/4/index.html
@@ -18,6 +18,7 @@
 
     <!-- <script src="utils/spy.js"></script> -->
     <script src="utils/call.js"></script>
+    <script src="utils/array.prototype.toggle.js"></script>
 
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
