add updates to search logic and specs

--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
@@ -30,6 +30,7 @@
     <script src="logic/authenticate-user.js"></script>
     <script src="logic/register-user.js"></script>
     <script src="logic/retrieve-user.js"></script>
+    <script src="logic/search-beer.js"></script>
 
     <script src="main.jsx" type="text/babel"></script>
 
