--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/specs.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/specs.html
@@ -22,6 +22,8 @@
   <script src="logic/register-user.spec.js"></script>
   <script src="logic/retrieve-user.js"></script>
   <script src="logic/retrieve-user.spec.js"></script>
+  <script src="logic/search-beer.js"></script>
+  <script src="logic/search-beer.spec.js"></script>
 
 </head>
 
