add updates to results and random beer of the day

--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
@@ -25,12 +25,16 @@
     <script src="components/register.jsx" type="text/babel"></script>
     <script src="components/feedback.jsx" type="text/babel"></script>
     <script src="components/menu.jsx" type="text/babel"></script>
+    <script src="components/item.jsx" type="text/babel"></script>
+    <script src="components/results.jsx" type="text/babel"></script>
+    <script src="components/search.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
 
     <script src="logic/authenticate-user.js"></script>
     <script src="logic/register-user.js"></script>
     <script src="logic/retrieve-user.js"></script>
     <script src="logic/search-beer.js"></script>
+
 
     <script src="main.jsx" type="text/babel"></script>
 
