--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
@@ -28,6 +28,7 @@
     <script src="components/item.jsx" type="text/babel"></script>
     <script src="components/results.jsx" type="text/babel"></script>
     <script src="components/search.jsx" type="text/babel"></script>
+    <script src="components/detail.jsx" type="text/babel"></script>
     <script src="components/app.jsx" type="text/babel"></script>
 
     <script src="logic/authenticate-user.js"></script>
