--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
@@ -22,6 +22,7 @@
     <script src="utils/array.prototype.random.js"></script>
     <script src="utils/function.prototype.extend.js"></script>
     <script src="utils/location.prototype.query-string.js"></script>
+    <script src="utils/address.js"></script>
 
     <script src="components/login.jsx" type="text/babel"></script>
     <script src="components/register.jsx" type="text/babel"></script>
