--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/specs.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/specs.html
@@ -8,11 +8,11 @@
   <link rel="shortcut icon" type="image/png" href="jasmine-3.5.0/jasmine_favicon.png">
   <link rel="stylesheet" href="jasmine-3.5.0/jasmine.css">
 
-  <script src="jasmine-3.5.0/jasmine.js"></script>
-  <script src="jasmine-3.5.0/jasmine-html.js"></script>
-  <script src="jasmine-3.5.0/boot.js"></script>
-  <script src="specs-config.js"></script>
-  <script src="specs-helper.js"></script>
+  <script src="vendor/jasmine-3.5.0/jasmine.js"></script>
+  <script src="vendor/jasmine-3.5.0/jasmine-html.js"></script>
+  <script src="vendor/jasmine-3.5.0/boot.js"></script>
+  <script src="vendor/specs-config.js"></script>
+  <script src="vendor/specs-helper.js"></script>
 
   <script src="utils/call.js"></script>
 
