--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/specs.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/specs.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v3.5.0</title>
 
-  <link rel="shortcut icon" type="image/png" href="jasmine-3.5.0/jasmine_favicon.png">
-  <link rel="stylesheet" href="jasmine-3.5.0/jasmine.css">
+  <link rel="shortcut icon" type="image/png" href="vendor/jasmine-3.5.0/jasmine_favicon.png">
+  <link rel="stylesheet" href="vendor/jasmine-3.5.0/jasmine.css">
 
   <script src="vendor/jasmine-3.5.0/jasmine.js"></script>
   <script src="vendor/jasmine-3.5.0/jasmine-html.js"></script>
@@ -24,6 +24,8 @@
   <script src="logic/retrieve-user.spec.js"></script>
   <script src="logic/search-beer.js"></script>
   <script src="logic/search-beer.spec.js"></script>
+  <script src="logic/toggle-fav-beer.js"></script>
+  <script src="logic/toggle-fav-beer.spec.js"></script>
 
 </head>
 
