--- a/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
+++ b/staff/groups/barman/cheers-and-beers/cheers-and-beers-app/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Crimson+Text|Indie+Flower|Satisfy&display=swap" rel="stylesheet">
 </head>
 
 <body>
